# drumkit

./: .gitignore  .gitmodules  Cargo.toml  README.md  _coverpage.md  index.html
.github/workflows/: aur.yml  homebrew.yml  ppa.yml  windows.yml
debian/: changelog  control  copyright  rules
mappings/: alesis-nitro-max.toml  general-midi.toml
src/: audio.rs  commands.rs  download.rs  kit.rs  lesson.rs  main.rs  mapping.rs  midi.rs  play.rs  sample.rs  settings.rs  setup.rs  stderr.rs  tui.rs
src/learning/: input.rs  metronome.rs  mod.rs  render.rs  scheduler.rs  scoring.rs
src/setup/: events.rs  mod.rs  render.rs  state.rs
src/tui/: event_loop.rs  input.rs  list_nav.rs  mod.rs  popups.rs  render.rs  render_popups.rs  widgets.rs
