[package]
name = "drumkit"
version = "0.1.10"
edition = "2024"
authors = ["backmeupplz"]
description = "Low-latency TUI MIDI drum sampler for electronic drum kits on Linux and macOS"
license = "MIT"
repository = "https://github.com/backmeupplz/drumkit"
homepage = "https://github.com/backmeupplz/drumkit"
keywords = ["midi", "drums", "sampler", "tui", "audio"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"

[dependencies]
midir = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
anyhow = "1"
cpal = "0.15"
rtrb = "0.3"
arc-swap = "1"
notify = "7"
ratatui = "0.29"
libc = "0.2"
symphonia = { version = "0.5.5", features = ["aac", "alac", "flac", "mp3", "ogg", "pcm", "wav", "isomp4", "mkv"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
hound = "3.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
